<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.lizheblogs.domainsearch.main.once.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/domainACTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="\?.1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:hint="@string/prompt_domain_mult"
                    android:imeOptions="actionSearch"
                    android:inputType="textUri"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/ingPB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaaaaaaa"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:padding="5dp"
                android:text="@string/multiple_instruction" />

            <ListView
                android:id="@+id/resultsLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#a7a7a7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:padding="5dp"
                android:text="@string/multiple_instruction2" />

            <ListView
                android:id="@+id/logLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a7a7a7" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
